--- a/Simon Says/Base.lproj/Main.storyboard
+++ b/Simon Says/Base.lproj/Main.storyboard
@@ -22,25 +22,25 @@
                                 <rect key="frame" x="0.0" y="567" width="375" height="100"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4EA-st-Qu4">
-                                        <rect key="frame" x="8" y="8" width="234" height="38"/>
+                                        <rect key="frame" x="16" y="8" width="223.5" height="38"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1B0-q6-V7J">
-                                        <rect key="frame" x="250" y="8" width="117" height="38"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                        <rect key="frame" x="247.5" y="8" width="111.5" height="38"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xeV-sV-Taj">
-                                        <rect key="frame" x="250" y="54" width="117" height="38"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                        <rect key="frame" x="247.5" y="54" width="111.5" height="38"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dht-Ti-BZT">
-                                        <rect key="frame" x="8" y="54" width="234" height="38"/>
+                                        <rect key="frame" x="16" y="54" width="223.5" height="38"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -51,21 +51,21 @@
                                     <constraint firstItem="1B0-q6-V7J" firstAttribute="width" secondItem="4EA-st-Qu4" secondAttribute="width" multiplier="50%" id="1NA-D1-uwe"/>
                                     <constraint firstItem="xeV-sV-Taj" firstAttribute="top" secondItem="1B0-q6-V7J" secondAttribute="bottom" constant="8" id="F3j-r3-XxZ"/>
                                     <constraint firstAttribute="bottom" secondItem="dht-Ti-BZT" secondAttribute="bottom" constant="8" id="GYN-TI-Os7"/>
-                                    <constraint firstItem="dht-Ti-BZT" firstAttribute="leading" secondItem="1td-n3-jbf" secondAttribute="leading" constant="8" id="Oad-PV-mdk"/>
+                                    <constraint firstItem="dht-Ti-BZT" firstAttribute="leading" secondItem="1td-n3-jbf" secondAttribute="leading" constant="16" id="Oad-PV-mdk"/>
                                     <constraint firstItem="xeV-sV-Taj" firstAttribute="leading" secondItem="dht-Ti-BZT" secondAttribute="trailing" constant="8" id="Qzs-hb-ARo"/>
                                     <constraint firstAttribute="bottom" secondItem="xeV-sV-Taj" secondAttribute="bottom" constant="8" id="V6u-1D-w3h"/>
                                     <constraint firstItem="dht-Ti-BZT" firstAttribute="top" secondItem="4EA-st-Qu4" secondAttribute="bottom" constant="8" id="a7c-pN-J9Q"/>
                                     <constraint firstItem="1B0-q6-V7J" firstAttribute="leading" secondItem="4EA-st-Qu4" secondAttribute="trailing" constant="8" id="cDE-Xd-Iym"/>
                                     <constraint firstItem="1B0-q6-V7J" firstAttribute="top" secondItem="1td-n3-jbf" secondAttribute="top" constant="8" id="fpW-Ox-V7K"/>
-                                    <constraint firstItem="4EA-st-Qu4" firstAttribute="leading" secondItem="1td-n3-jbf" secondAttribute="leading" constant="8" id="fsU-aT-B6M"/>
+                                    <constraint firstItem="4EA-st-Qu4" firstAttribute="leading" secondItem="1td-n3-jbf" secondAttribute="leading" constant="16" id="fsU-aT-B6M"/>
                                     <constraint firstItem="1B0-q6-V7J" firstAttribute="leading" secondItem="4EA-st-Qu4" secondAttribute="trailing" constant="8" id="jAZ-Jp-ngq"/>
-                                    <constraint firstAttribute="trailing" secondItem="xeV-sV-Taj" secondAttribute="trailing" constant="8" id="lGo-qY-gbq"/>
+                                    <constraint firstAttribute="trailing" secondItem="xeV-sV-Taj" secondAttribute="trailing" constant="16" id="lGo-qY-gbq"/>
                                     <constraint firstItem="dht-Ti-BZT" firstAttribute="height" secondItem="4EA-st-Qu4" secondAttribute="height" id="orW-br-bXg"/>
                                     <constraint firstItem="xeV-sV-Taj" firstAttribute="width" secondItem="dht-Ti-BZT" secondAttribute="width" multiplier="50%" id="rFh-QN-5jj"/>
                                     <constraint firstItem="xeV-sV-Taj" firstAttribute="height" secondItem="1B0-q6-V7J" secondAttribute="height" id="tdM-OI-cvu"/>
                                     <constraint firstAttribute="height" constant="100" id="vGt-fH-n3k"/>
                                     <constraint firstItem="4EA-st-Qu4" firstAttribute="top" secondItem="1td-n3-jbf" secondAttribute="top" constant="8" id="vWN-YX-0vK"/>
-                                    <constraint firstAttribute="trailing" secondItem="1B0-q6-V7J" secondAttribute="trailing" constant="8" id="xZo-wL-8rD"/>
+                                    <constraint firstAttribute="trailing" secondItem="1B0-q6-V7J" secondAttribute="trailing" constant="16" id="xZo-wL-8rD"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pCB-p3-VNY">
@@ -158,7 +158,7 @@
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Simon Says..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jC6-NR-65n">
                                         <rect key="frame" x="37.5" y="8" width="300" height="117.5"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
                                         <color key="textColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
